Enum artisttype {
  CANTE  
  GUITARRA  
  BAILE   
}

Enum tonalities {
  LOCRIO
  FRIGIO
  MENOR
  DORICO
  MXIOLIDIO
  MAYOR
  LIDIO
}

Enum keys {
  A    
  Bb   
  B    
  C    
  Db  
  D    
  Eb   
  E    
  F    
  Gb  
  G    
  Ab  
}

Enum role {
  MASTER
  ADMIN
  USER
}

Table user {
  id serial [primary key]
  email varchar(255) [not null, unique]
  password varchar(255) [not null]
  role role [default: 'USER']
  created_at timestamp
  updated_at timestamp

  Indexes {
    (email) [name: "unique_user_email"]
  }
}

Table palo {
  id serial [primary key] 
  name varchar(255) [not null, unique]  
  origin varchar(255) [not null]
  origin_date timestamp [not null]
  user_create_id int [not null, ref: > user.id]
  user_update_id int [ref: > user.id]
  created_at timestamp 
  updated_at timestamp 

  Indexes {
    (name) [name: "unique_palo_name"]
    (name) [type: gin, name: "idx_palo_name_trgm"]

  }
}

Table estilo {
  id serial [primary key] 
  name varchar(255) [not null, unique]  
  structure varchar(255) [not null]  
  origin varchar(255) [not null]
  user_create_id int [not null, ref: > user.id]
  user_update_id int [ref: > user.id]
  created_at timestamp 
  updated_at timestamp 

  Indexes {
    (name) [name: "unique_estilo_name"]
    (name) [type: gin, name: "idx_estilo_name_trgm"]

  }
}

Table artist {
  id serial [primary key] 
  name varchar(255) [not null, unique]  
  birth_year int  
  death_year int  
  origin varchar(255)  
  type artisttype [not null]  
  user_create_id int [not null, ref: > user.id]
  user_update_id int [ref: > user.id]
  created_at timestamp 
  updated_at timestamp 

  Indexes {
    (name) [name: "unique_artist_name"]
    (name) [type: gin, name: "idx_artist_name_trgm"]

  }
}

Table letra {
  id serial [primary key] 
  estilo_id int [not null, ref: > estilo.id]  
  name varchar(255) [not null, unique] 
  verses text[] [not null]
  comment text
  user_create_id int [not null, ref: > user.id]
  user_update_id int [ref: > user.id]
  created_at timestamp 
  updated_at timestamp 

  Indexes {
    (name) [name: "unique_letra_estilo_name"]
    (estilo_id) [name: "idx_letra_estilo_id"]
    (name) [type: gin, name: "idx_letra_estilo_name_trgm"]

  }
}

Table palo_estilo {
  id serial [primary key]
  name varchar(255) [not null, unique] 
  palo_id int [not null, ref: > palo.id]  
  estilo_id int [not null, ref: > estilo.id]  
  user_create_id int [not null, ref: > user.id]
  user_update_id int [ref: > user.id]
  created_at timestamp 
  updated_at timestamp 

  Indexes {
    (palo_id, estilo_id) [unique, name: "unique_palo_estilo"]
    (palo_id) [name: "idx_palo_estilo_palo_id"]
    (estilo_id) [name: "idx_palo_estilo_estilo_id"]
  }
}

Table letra_artist {
  id serial [primary key]
  name varchar(255) [not null, unique] 
  letra_id int [not null, ref: > letra.id]  
  artist_id int [not null, ref: > artist.id]  
  recording_url varchar(255)  
  year int  
  user_create_id int [not null, ref: > user.id]
  user_update_id int [ref: > user.id]
  created_at timestamp 
  updated_at timestamp 

  Indexes {
    (letra_id, artist_id) [unique, name: "unique_letra_artist"]
    (letra_id) [name: "idx_letra_artist_letra_id"]
    (artist_id) [name: "idx_letra_artist_artist_id"]
  }
}


Table feedback {
  id serial [primary key]
  user_id int [ref: > user.id] 
  email varchar(255)  
  comment text  
  created_at timestamp 
  updated_at timestamp 

  Indexes {
    (user_id) [name: "idx_feedback_user_id"]
  }
}
